# rust-smarter-gpt

./: Cargo.toml  README.md
src/: main.rs
src/utils/: intern.rs  mod.rs  professor.rs  researcher.rs
