[package]
name = "rust-openai-playground"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.3"
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"